# code-critic-cli

./: .env.example  .gitignore  LICENSE  README.md  buggy.cpp  dsa.cpp  pyproject.toml  requirements.txt  reviewer.py  test.cpp
ai_reviewer/: __init__.py  ai_client.py  cli.py  config.py  file_handler.py  prompt_manager.py  renderer.py
test_samples/: sample_leak.cpp  sample_slow.py
tests/: test_cli.py
